# Pivo

./: CONTEXT_MENU_IMPLEMENTATION.md  FINAL_REVIEW.md  README-zh.md  README.md  REVIEW_NOTES.md  log-viewer.html  package-lock.json  package.json  pnpm-lock.yaml  test-logs.sh  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  component-structure-plan.md
docs/migration/: phase1-foundation.md
docs/rfcs/: RFC-20250122-001-architecture-decision-records.md  RFC-20250122-002-appendix-code-examples.md  RFC-20250122-002-frontend-architecture-refactoring.md  RFC-20250124-001-message-processing-architecture.md  RFC-20250131-architecture-cleanup.md  RFC-20250131-architecture-validation.md  RFC-20250131-complete-architecture-review.md  RFC-20250131-final-assessment.md  RFC-20250131-final-cleanup-summary.md  RFC-20250131-implementation-gaps.md  RFC-20250131-implementation-summary.md  RFC-20250131-task-attempt-execution-architecture.md  RFC-20250131-third-review-findings.md  concepts.md
scripts/: notarize.sh  update-execution-types.mjs
src/: App.tsx  index.css  log-viewer.tsx  main.tsx
src-tauri/: Cargo.toml  FIX_GIT_LFS_ENVIRONMENT.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  project-window.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_fix_enum_values.sql  003_add_attempt_conversations.sql  20250121_add_git_tracking_fields.sql  20250122_add_merge_requests_table.sql  20250123_add_git_provider_to_projects.sql  20250124_add_claude_session_id.sql  20250128_add_last_opened_to_projects.sql  20250201_add_main_branch_to_projects.sql
src-tauri/src/: lib.rs  logging.rs  main.rs  menu.rs  window_manager.rs
src-tauri/src/commands/: ai.rs  cli.rs  command.rs  dev_server.rs  filesystem.rs  git.rs  git_info.rs  github.rs  gitlab.rs  logging.rs  mcp.rs  mod.rs  process.rs  projects.rs  system.rs  task_attempts.rs  task_commands.rs  tasks.rs  terminal.rs  window.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: command.rs  config.rs  conversation.rs  execution_process.rs  git_diff.rs  git_provider.rs  merge_request.rs  mod.rs  project.rs  task.rs  task_attempt.rs
src-tauri/src/repository/: conversation_repository.rs  database_repository.rs  mod.rs
src-tauri/src/services/: ai_executor.rs  cli_executor.rs  command_service.rs  config_service.rs  file_watcher_service.rs  git_info.rs  git_platform.rs  git_service.rs  github_service.rs  gitlab_service.rs  mcp_server.rs  merge_request_service.rs  mod.rs  process_service.rs  project_service.rs  task_service.rs  terminal_service.rs  vcs_sync_service.rs
src-tauri/src/services/ai_executor/: claude.rs  gemini.rs
src-tauri/src/services/coding_agent_executor/: agent.rs  claude_agent.rs  claude_converter.rs  gemini_agent.rs  gemini_converter.rs  message.rs  metadata.rs  mod.rs  service.rs  stateful_claude_converter.rs  types.rs
src-tauri/src/utils/: command.rs
src/app/: App.tsx  AppRouter.tsx  (+3 more)
(+232 files in other folders)
