[package]
name = "pivo"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pivo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
slug = "0.1.6"
async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json"] }
lazy_static = "1.5.0"
git2 = "0.19.0"
log = "0.4"
log4rs = { version = "1.3", features = ["file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
directories = "5.0"
regex = "1.11.1"
urlencoding = "2.1.3"
base64 = "0.22"
notify = "7.0"
rand = "0.8"
dirs = "5.0"
glob = "0.3"
walkdir = "2.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

